force-app/main/default/objects/RTV_SellingPrices__b/RTV_SellingPrices__b.object-meta.xml
<CustomObject>
    <description>季度成交价格表</description>
    <label>RTV SellingPrices</label>
    <pluralLabel>RTV SellingPrices</pluralLabel>
</CustomObject>