force-app/main/default/objects/RTV_SellingPrices__b/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>