force-app/main/default/objects/RTV_SellingPrices__b/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <length>8</length>
    <type>Text</type>
</CustomField>