force-app/main/default/objects/RTV_SellingPrices__b/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>