force-app/main/default/objects/RTV_SellingPrices__b/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <label>key</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>