force-app/main/default/objects/RTV_SellingPrices__b/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <label>Material Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>