force-app/main/default/objects/RTV_SellingPrices__b/fields/MCSC__c.field-meta.xml
<CustomField>
    <fullName>MCSC__c</fullName>
    <label>MCSC</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>