force-app/main/default/objects/RTV_SellingPrices__b/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>