force-app/main/default/objects/RTV_SellingPrices__b/fields/Order_Header__c.field-meta.xml
<CustomField>
    <fullName>Order_Header__c</fullName>
    <label>Order Header</label>
    <length>80</length>
    <type>Text</type>
</CustomField>