force-app/main/default/objects/RTV_SellingPrices__b/fields/Season_Code__c.field-meta.xml
<CustomField>
    <fullName>Season_Code__c</fullName>
    <label>Season Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>