force-app/main/default/objects/RTV_SellingPrices__b/fields/Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Code__c</fullName>
    <label>Ship To Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>