force-app/main/default/objects/RTV_SellingPrices__b/fields/Sold_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Code__c</fullName>
    <label>Sold To Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>