force-app/main/default/objects/RTV_SellingPrices__b/fields/Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Style_Number__c</fullName>
    <label>Style Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>